--- a/src/app/pages/admin-module/admin-components/products/add-edit-product/add-edit-product/add-edit-product.component.html
+++ b/src/app/pages/admin-module/admin-components/products/add-edit-product/add-edit-product/add-edit-product.component.html
@@ -1,134 +1,134 @@
 <div class="container p-4">
-  <form (ngSubmit)="onSubmit()">
-    <div class="row">
-      <div class="col-6 col-centered">
-        <div [formGroup]="addProductForm" class="form-group">
-          <input placeholder="Product name" type="text" formControlName="name" class="form-control"
-            [ngClass]="{ 'is-invalid': submitted && f.name.errors }" />
-          <div *ngIf="submitted && f.name.errors" class="invalid-feedback" role="alert">
-            <div *ngIf="f.name.errors.required">name is required</div>
-          </div>
-        </div>
-        <div [formGroup]="addProductForm" class="form-group">
-          <input placeholder="Description" formControlName="description" class="form-control"
-            [ngClass]="{ 'is-invalid': submitted && f.description.errors }" />
-          <div *ngIf="submitted && f.description.errors" class="invalid-feedback">
-            <div *ngIf="f.description.errors.required">Description is required</div>
-            <div *ngIf="f.description.errors.minlength">Description must be more than 6 characters</div>
-          </div>
-        </div>
-        <div [formGroup]="addProductForm" class="form-group">
-          <input placeholder="Price" formControlName="price" class="form-control"
-            [ngClass]="{ 'is-invalid': submitted && f.price.errors }" />
-          <div *ngIf="submitted && f.price.errors" class="invalid-feedback">
-            <div *ngIf="f.price.errors.required">Price is required</div>
-          </div>
-        </div>
-        <div [formGroup]="addProductForm" class="form-group">
-          <input bsDatepicker [bsConfig]="{ dateInputFormat: 'DD.MM.YYYY' }" placement="right" placeholder="Launch" formControlName="launchDate" class="form-control"
-            [ngClass]="{ 'is-invalid': submitted && f.launchDate.errors }" />
-          <div *ngIf="submitted && f.launchDate.errors" class="invalid-feedback">
-            <div *ngIf="f.launchDate.errors.required">Launch Date is required</div>
-          </div>
-        </div>
-        <div [formGroup]="addProductForm" class="form-group">
-          <input bsDatepicker [bsConfig]="{ dateInputFormat: 'DD.MM.YYYY' }" placement="right" placeholder="Tournament Store Launch"
-            formControlName="tournamentStoreLaunchDate" class="form-control"
-            [ngClass]="{ 'is-invalid': submitted && f.tournamentStoreLaunchDate.errors }" />
-          <div *ngIf="submitted && f.tournamentStoreLaunchDate.errors" class="invalid-feedback">
-            <div *ngIf="f.tournamentStoreLaunchDate.errors.required">Tournament Store Launch Date is required</div>
-          </div>
-        </div>
-        <div [formGroup]="addProductForm" class="form-group">
-          <input bsDatepicker [bsConfig]="{ dateInputFormat: 'DD.MM.YYYY' }" placement="right" placeholder="Konami Tournament Legal Date"
-            formControlName="konamiTournamentLegalDate" class="form-control"
-            [ngClass]="{ 'is-invalid': submitted && f.konamiTournamentLegalDate.errors }" />
-          <div *ngIf="submitted && f.konamiTournamentLegalDate.errors" class="invalid-feedback">
-            <div *ngIf="f.konamiTournamentLegalDate.errors.required">Konami Tournament Legal Date is required</div>
-          </div>
-        </div>
-        <div [formGroup]="addProductForm" class="form-group">
-          <input placeholder="Cards per pack" formControlName="cardsPerPack" class="form-control"
-            [ngClass]="{ 'is-invalid': submitted && f.cardsPerPack.errors }" />
-          <div *ngIf="submitted && f.cardsPerPack.errors" class="invalid-feedback">
-            <div *ngIf="f.cardsPerPack.errors.required">Cards per pack is required</div>
-          </div>
-        </div>
-      </div>
-      <div class="col-6 col-centered">
-        <div [formGroup]="addProductForm" class="form-group">
-          <input placeholder="Size" formControlName="size" class="form-control"
-            [ngClass]="{ 'is-invalid': submitted && f.size.errors }" />
-          <div *ngIf="submitted && f.size.errors" class="invalid-feedback">
-            <div *ngIf="f.size.errors.required">Size is required</div>
-          </div>
-        </div>
-        <div [formGroup]="addProductForm" class="form-group">
-          <input placeholder="Short description" formControlName="shortDescription" class="form-control"
-            [ngClass]="{ 'is-invalid': submitted && f.shortDescription.errors }" />
-          <div *ngIf="submitted && f.shortDescription.errors" class="invalid-feedback">
-            <div *ngIf="f.shortDescription.errors.required">Short description is required</div>
-          </div>
-        </div>
-        <div [formGroup]="addProductForm" class="form-group">
-          <input placeholder="Quantity" formControlName="quantity" class="form-control"
-            [ngClass]="{ 'is-invalid': submitted && f.quantity.errors }" />
-          <div *ngIf="submitted && f.quantity.errors" class="invalid-feedback">
-            <div *ngIf="f.quantity.errors.required">Quantity is required</div>
-          </div>
-        </div>
-        <div [formGroup]="addProductForm" class="form-group">
-          <input placeholder="On sale percent" formControlName="onSalePercent" class="form-control"
-            [ngClass]="{ 'is-invalid': submitted && f.onSalePercent.errors }" />
-          <div *ngIf="submitted && f.onSalePercent.errors" class="invalid-feedback">
-            <div *ngIf="f.onSalePercent.errors.required">On sale percent is required</div>
-          </div>
-        </div>
-        <div [formGroup]="addProductForm" class="form-group">
-          <select formControlName="categoryId" class="form-control"
-            [ngClass]="{ 'is-invalid': submitted && f.categoryId.errors }">
+    <form (ngSubmit)="onSubmit()">
+        <div class="row">
+            <div class="col-6 col-centered">
+                <div [formGroup]="addProductForm" class="form-group">
+                    <input placeholder="Product name" type="text" formControlName="name" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.name.errors }" />
+                    <div *ngIf="submitted && f.name.errors" class="invalid-feedback" role="alert">
+                        <div *ngIf="f.name.errors.required">name is required</div>
+                    </div>
+                </div>
+                <div [formGroup]="addProductForm" class="form-group">
+                    <input placeholder="Description" formControlName="description" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.description.errors }" />
+                    <div *ngIf="submitted && f.description.errors" class="invalid-feedback">
+                        <div *ngIf="f.description.errors.required">Description is required</div>
+                        <div *ngIf="f.description.errors.minlength">Description must be more than 6 characters</div>
+                    </div>
+                </div>
+                <div [formGroup]="addProductForm" class="form-group">
+                    <input placeholder="Price" formControlName="price" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.price.errors }" />
+                    <div *ngIf="submitted && f.price.errors" class="invalid-feedback">
+                        <div *ngIf="f.price.errors.required">Price is required</div>
+                    </div>
+                </div>
+                <div [formGroup]="addProductForm" class="form-group">
+                    <input bsDatepicker [bsConfig]="{ dateInputFormat: 'DD.MM.YYYY' }" placement="right" placeholder="Launch" formControlName="launchDate" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.launchDate.errors }" />
+                    <div *ngIf="submitted && f.launchDate.errors" class="invalid-feedback">
+                        <div *ngIf="f.launchDate.errors.required">Launch Date is required</div>
+                    </div>
+                </div>
+                <div [formGroup]="addProductForm" class="form-group">
+                    <input bsDatepicker [bsConfig]="{ dateInputFormat: 'DD.MM.YYYY' }" placement="right" placeholder="Tournament Store Launch" formControlName="tournamentStoreLaunchDate" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.tournamentStoreLaunchDate.errors }"
+                    />
+                    <div *ngIf="submitted && f.tournamentStoreLaunchDate.errors" class="invalid-feedback">
+                        <div *ngIf="f.tournamentStoreLaunchDate.errors.required">Tournament Store Launch Date is required</div>
+                    </div>
+                </div>
+                <div [formGroup]="addProductForm" class="form-group">
+                    <input bsDatepicker [bsConfig]="{ dateInputFormat: 'DD.MM.YYYY' }" placement="right" placeholder="Konami Tournament Legal Date" formControlName="konamiTournamentLegalDate" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.konamiTournamentLegalDate.errors }"
+                    />
+                    <div *ngIf="submitted && f.konamiTournamentLegalDate.errors" class="invalid-feedback">
+                        <div *ngIf="f.konamiTournamentLegalDate.errors.required">Konami Tournament Legal Date is required</div>
+                    </div>
+                </div>
+                <div [formGroup]="addProductForm" class="form-group">
+                    <input placeholder="Cards per pack" formControlName="cardsPerPack" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.cardsPerPack.errors }" />
+                    <div *ngIf="submitted && f.cardsPerPack.errors" class="invalid-feedback">
+                        <div *ngIf="f.cardsPerPack.errors.required">Cards per pack is required</div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 col-centered">
+                <div [formGroup]="addProductForm" class="form-group">
+                    <input placeholder="Size" formControlName="size" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.size.errors }" />
+                    <div *ngIf="submitted && f.size.errors" class="invalid-feedback">
+                        <div *ngIf="f.size.errors.required">Size is required</div>
+                    </div>
+                </div>
+                <div [formGroup]="addProductForm" class="form-group">
+                    <input placeholder="Short description" formControlName="shortDescription" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.shortDescription.errors }" />
+                    <div *ngIf="submitted && f.shortDescription.errors" class="invalid-feedback">
+                        <div *ngIf="f.shortDescription.errors.required">Short description is required</div>
+                    </div>
+                </div>
+                <div [formGroup]="addProductForm" class="form-group">
+                    <input placeholder="Quantity" formControlName="quantity" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.quantity.errors }" />
+                    <div *ngIf="submitted && f.quantity.errors" class="invalid-feedback">
+                        <div *ngIf="f.quantity.errors.required">Quantity is required</div>
+                    </div>
+                </div>
+                <div [formGroup]="addProductForm" class="form-group">
+                    <input placeholder="On sale percent" formControlName="onSalePercent" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.onSalePercent.errors }" />
+                    <div *ngIf="submitted && f.onSalePercent.errors" class="invalid-feedback">
+                        <div *ngIf="f.onSalePercent.errors.required">On sale percent is required</div>
+                    </div>
+                </div>
+                <div [formGroup]="addProductForm" class="form-group">
+                    <select formControlName="categoryId" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.categoryId.errors }">
             <option [selected]="category === product.categoryId" *ngFor="let category of categores"
               [value]="category.id">{{category.name}}</option>
           </select>
-          <div *ngIf="submitted && f.categoryId.errors" class="invalid-feedback">
-            <div *ngIf="f.categoryId.errors.required">Category is required</div>
-          </div>
+                    <div *ngIf="submitted && f.categoryId.errors" class="invalid-feedback">
+                        <div *ngIf="f.categoryId.errors.required">Category is required</div>
+                    </div>
+                </div>
+                <div [formGroup]="addProductForm" class="form-group">
+                    <input type="checkbox" formControlName="inStock" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.inStock.errors }" /> In Stock
+                    <div *ngIf="submitted && f.inStock.errors" class="invalid-feedback">
+                        <div *ngIf="f.inStock.errors.required">inStock is required</div>
+                    </div>
+                </div>
+                <div [formGroup]="addProductForm" class="form-group">
+                    <input type="checkbox" formControlName="isActive" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.isActive.errors }" /> Active
+                    <div *ngIf="submitted && f.isActive.errors" class="invalid-feedback">
+                        <div *ngIf="f.isActive.errors.required">isActive is required</div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-    <div class="row col-centered">
-      <div class="col-2 col-centered">
-        <div [formGroup]="addProductForm" class="form-group">
-          <add-image formControlName="photo1" (imageLoaded)="getImage($event, 1)"></add-image>
+        <div class="row col-centered">
+            <div class="col-2 col-centered">
+                <div [formGroup]="addProductForm" class="form-group">
+                    <add-image formControlName="photo1" (imageLoaded)="getImage($event, 1)"></add-image>
+                </div>
+            </div>
+            <div class="col-2 col-centered">
+                <div [formGroup]="addProductForm" class="form-group">
+                    <add-image formControlName="photo2" (imageLoaded)="getImage($event, 2)"></add-image>
+                </div>
+            </div>
+            <div class="col-2 col-centered">
+                <div [formGroup]="addProductForm" class="form-group">
+                    <add-image formControlName="photo3" (imageLoaded)="getImage($event, 3)"></add-image>
+                </div>
+            </div>
+            <div class="col-2 col-centered">
+                <div [formGroup]="addProductForm" class="form-group">
+                    <add-image formControlName="photo4" (imageLoaded)="getImage($event, 4)"></add-image>
+                </div>
+            </div>
+            <div class="col-2 col-centered">
+                <div [formGroup]="addProductForm" class="form-group">
+                    <add-image formControlName="photo5" (imageLoaded)="getImage($event, 5)"></add-image>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="col-2 col-centered">
-        <div [formGroup]="addProductForm" class="form-group">
-          <add-image formControlName="photo2" (imageLoaded)="getImage($event, 2)"></add-image>
+        <div class="row">
+            <div class="col-12 col-centered">
+                <div [formGroup]="addProductForm" class="form-group">
+                    <button type="submit" class="btn btn-block btn-success float-right">{{buttonLabel}}</button>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="col-2 col-centered">
-        <div [formGroup]="addProductForm" class="form-group">
-          <add-image formControlName="photo3" (imageLoaded)="getImage($event, 3)"></add-image>
-        </div>
-      </div>
-      <div class="col-2 col-centered">
-        <div [formGroup]="addProductForm" class="form-group">
-          <add-image formControlName="photo4" (imageLoaded)="getImage($event, 4)"></add-image>
-        </div>
-      </div>
-      <div class="col-2 col-centered">
-        <div [formGroup]="addProductForm" class="form-group">
-          <add-image formControlName="photo5" (imageLoaded)="getImage($event, 5)"></add-image>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-12 col-centered">
-        <div [formGroup]="addProductForm" class="form-group">
-          <button type="submit" class="btn btn-block btn-success float-right">{{buttonLabel}}</button>
-        </div>
-      </div>
-    </div>
-  </form>
+    </form>
 </div>
